Modernize TopologyLinkDataChangeHandlerTest a bit
Use List.of() instead of Collections.singletonList(). Also use
ArgumentMatchers.anyList() to fix a warning.

Change-Id: Id86b0c7193244761edf487dfea99f0edd560bfd7
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>